--- a/StudentInfoManager/Views/Shared/_Layout.cshtml
+++ b/StudentInfoManager/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/StudentInfoManager.styles.css" asp-append-version="true" />
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -18,13 +19,45 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Create</a>
                         </li>
+                       
+                       
+                    </ul>
+                    <ul class="navbar-nav flex">
+                        @{
+                            if (User.Identity.IsAuthenticated)
+                            {
+
+                                if (User.IsInRole("Admin"))
+                                {
+                                    <li><a asp-controller="Home" asp-action="Index" asp-area="Admin">Admin Home</a></li>
+                                }
+
+                                <li class="nav-item">
+                                <i class="fa-solid fa-user"></i>
+                                <a class ="nav-link text-dark">@User.Identity?.Name</a>
+                                </li>
+                                <li class="nav-item"> <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                               
+                            }
+
+                            else{
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                                </li>
+                                
+                            }
+                        }
+                        
                     </ul>
                 </div>
             </div>
